# pints-py

./: .gitignore  .gitmodules  LICENSE  README.md  features.csv  pyproject.toml
pints/: __init__.py  cli.py  db.py
pints.egg-info/: PKG-INFO  SOURCES.txt
pints/pints.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pints/sql/: pints_core_seed_v1.sql  pints_core_v1.sql
pints/sql/core/: pints_core_v1.sql
pints/sql/seeds/: pints_core_seed_v1.sql
scripts/: sync_core_sql.py
tests/: test_smoke.py
