[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pints"
version = "0.1.0"
description = "Python wrapper for PINTS (Pipelines for Non-Target Screening) using DuckDB"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["duckdb>=1.0.0", "pandas>=2.0.0", "pyyaml>=6.0"]

[project.scripts]
pints = "pints.cli:main"

[tool.setuptools]
packages = ["pints"]
include-package-data = true

[tool.setuptools.package-data]
pints = [
  "sql/*.sql",
  "sql/**/*.sql",
  "sql/CORE_VERSION"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
